--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -53,26 +53,25 @@ SOFTWARE.-->
                 style="@style/AligableText"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/title_text_view_height"
-                android:layout_marginBottom="@dimen/title_margin_bot"
                 android:text="@string/fashion_title"
                 android:textSize="@dimen/title_fashion_tsize" />
 
             <TextView
                 android:id="@+id/text_state"
-                android:layout_width="@dimen/state_width"
-                android:layout_height="@dimen/state_height"
-                android:layout_marginBottom="@dimen/margin_bottom_state"
                 android:background="@drawable/oval_text_view"
-                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_bottom_state"
+                android:textColor="@android:color/white"
                 android:text="@string/state_text"
                 android:textSize="@dimen/perform_size" />
 
-            <TextView
-                style="@style/lineColor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lines_height"
-                android:layout_marginBottom="@dimen/margin_bot"
-                android:layout_marginTop="@dimen/margin_top" />
+
+            <View
+                style="@style/line"
+                android:id="@+id/line1"/>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -83,29 +82,31 @@ SOFTWARE.-->
                     android:id="@+id/start_show"
                     android:layout_width="@dimen/general_layout_width"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_marginTop="@dimen/margin_top"
                     android:layout_weight=".5"
                     android:text="@string/starting"
                     android:textSize="@dimen/layout_text_size" />
 
-                                                                           <TextView
-                                                                           android:id="@+id/str_data"
-                                                                           android:layout_width="@dimen/general_layout_width"
-                                                                           android:layout_height="wrap_content"
-                                                                           android:layout_weight=".4"
-                                                                           android:text="@string/start_date"
-                                                                           android:textSize="@dimen/layout_text_size"
-                                                                                />
+                                                                                   <TextView
+                                                                                    style="@style/AligableText"
+                                                                                    android:id="@+id/str_data"
+                                                                                    android:layout_width="@dimen/general_layout_width"
+                                                                                    android:layout_height="wrap_content"
+                                                                                    android:layout_weight=".4"
+                                                                                    android:layout_marginBottom="@dimen/margin_bot"
+                                                                                    android:layout_marginTop="@dimen/margin_top"
+                                                                                    android:text="@string/start_date"
+                                                                                    android:textSize="@dimen/layout_text_size"
+                                                                                       />
 
 
             </LinearLayout>
 
-            <TextView
-                style="@style/lineColor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lines_height"
-                android:layout_marginBottom="@dimen/margin_bot"
-                android:layout_marginTop="@dimen/margin_top" />
+            <View
+                style="@style/line"
+                android:id="@+id/line2"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -115,43 +116,34 @@ SOFTWARE.-->
                 <TextView
                     android:id="@+id/fin_label"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/margin_bot"
                     android:layout_marginTop="@dimen/margin_top"
                     android:layout_weight=".4"
                     android:text="@string/finish"
                     android:textSize="@dimen/layout_text_size" />
 
-                                                                            <TextView
-                                                                             android:id="@+id/fin_data"
-                                                                             android:layout_width="match_parent"
-                                                                             android:layout_height="wrap_content"
-                                                                             android:layout_marginBottom="@dimen/margin_bot"
-                                                                             android:layout_marginTop="@dimen/margin_top"
-                                                                             android:layout_weight=".5"
-                                                                             android:text="@string/finish_date"
-                                                                             android:textSize="@dimen/layout_text_size" 
-                                                                                  />
-            <!-- [Comment] Something wrong with formatting -->
+                <TextView
+                    style="@style/AligableText"
+                    android:id="@+id/fin_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".5"
+                    android:text="@string/finish_date"
+                    android:textSize="@dimen/layout_text_size"
+                    />
+                <!-- [Comment] Something wrong with formatting -->
 
             </LinearLayout>
 
 
-            <TextView
-                style="@style/lineColor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lines_height"
-                android:layout_marginBottom="@dimen/margin_bot"
+            <View
+                style="@style/line"
+                android:id="@+id/line3"
+               />
 
-                />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,31 +154,33 @@ SOFTWARE.-->
                     android:id="@+id/designer"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginBottom="@dimen/margin_bot"
                     android:layout_marginTop="@dimen/margin_top"
                     android:layout_weight=".4"
                     android:text="@string/alexander_mc_queen"
                     android:textSize="@dimen/layout_text_size" />
 
-                                                                                <TextView
-                                                                                 android:id="@+id/stockholm"
-                                                                                 android:layout_width="50dp"
-                                                                                 android:layout_height="wrap_content"
-                                                                                 android:layout_marginTop="@dimen/margin_top"
-                                                                                 android:layout_weight=".3"
-                                                                                 android:text="@string/stockholmfall"
-                                                                                 android:textSize="@dimen/layout_text_size"
+                <TextView
+                    style="@style/AligableText"
+                    android:id="@+id/stockholm"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_weight=".3"
+                    android:text="@string/stockholmfall"
+                    android:textSize="@dimen/layout_text_size"
 
-                                                                                      />
+                    />
 
 
             </LinearLayout>
 
-            <TextView
-                style="@style/lineColor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lines_height"
-                android:layout_marginBottom="@dimen/margin_bot" />
+
+            <View
+                style="@style/line"
+                android:id="@+id/line_fin"
+                android:layout_marginTop="@dimen/margin_top"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -197,37 +191,36 @@ SOFTWARE.-->
                     android:id="@+id/channel_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginBottom="@dimen/margin_bot"
                     android:layout_marginTop="@dimen/margin_top"
                     android:layout_weight=".4"
                     android:text="@string/channel"
                     android:textSize="@dimen/layout_text_size" />
 
 
-                                                                                <TextView
-                                                                                 android:id="@+id/spring_coutre"
-                                                                                 android:layout_width="match_parent"
-                                                                                 android:layout_height="wrap_content"
-                                                                                 android:layout_marginBottom="@dimen/margin_bottom_start"
-                                                                                 android:layout_marginTop="@dimen/margin_top"
-                                                                                 android:layout_weight=".5"
-                                                                                 android:text="@string/spring_couture"
-                                                                                 android:textSize="@dimen/layout_text_size"
+                <TextView
+                    style="@style/AligableText"
+                    android:id="@+id/spring_coutre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".5"
+                    android:text="@string/spring_couture"
+                    android:textSize="@dimen/layout_text_size"
 
-                                                                                     />
+                    />
 
             </LinearLayout>
 
-            <TextView
-                style="@style/lineColor"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/lines_height"
-                android:layout_marginBottom="@dimen/margin_bot"
-                android:layout_marginTop="@dimen/margin_top"
+            <View
+                style="@style/line"
+                android:id="@+id/line_cout"/>
 
-                />
 
             <TextView
+                style="@style/AligableText"
+                android:id="@+id/fashion_runway"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_bot"
@@ -239,19 +232,17 @@ SOFTWARE.-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/layout_recycler"
-             android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_weight=".7"
             >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
-               android:layout_width="match_parent"
-               android:layout_height="@dimen/layout_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/rec_pad"
-                android:paddingRight="@dimen/rec_pad"
-               
-               
+
 
                 />
         </LinearLayout>
